--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ table {
 body {
     font-family: 'Outfit', sans-serif;
     background-color: hsl(217, 54%, 11%);
-    min-width: 100vw;
-    min-height: 100vh;
+    /* min-width: 100vw;
+    min-height: 100vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,6 +59,7 @@ body {
 }
 
 section {
+    margin: 3rem;
     width: 19rem;
     height: 34rem;
     display: flex;
@@ -73,7 +74,7 @@ section {
 .bg-image {
     border-radius: 0.7rem;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 h1 {
@@ -158,6 +159,16 @@ span {
     right: 0;
 }
 
+.img-overlay {
+    position: absolute;
+    width: 14%;
+    height: 14%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
 .img-container:hover .overlay {
-    opacity: 0.4;
+    opacity: 0.5;
+    transition: 0.2s;
 }
