--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ table {
 body {
     font-family: 'Outfit', sans-serif;
     background-color: hsl(217, 54%, 11%);
-    /* min-width: 100vw;
-    min-height: 100vh; */
+    min-width: 100vw;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -170,5 +170,5 @@ span {
 
 .img-container:hover .overlay {
     opacity: 0.5;
-    transition: 0.2s;
+    transition: .3s all ease-in-out;
 }
