--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ span {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    opacity: 0;
 }
 
 .img-container:hover .overlay {
@@ -175,4 +176,15 @@ span {
 
 span {
     font-weight: 400;
+}
+
+.img-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
