--- a/style.css
+++ b/style.css
@@ -180,11 +180,10 @@ span {
 
 .img-overlay {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 14%;
+    height: 14%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     opacity: 1;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
 }
